--- a/templates/alarm.html
+++ b/templates/alarm.html
@@ -18,11 +18,11 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/templates/index.html">Home</a>
                   </li>
     
                   <li class="nav-item">
-                    <a class="nav-link" href="/templates/alarm.html">Alarm</a>
+                    <a class="nav-link" href="#">Alarm</a>
                   </li>
     
                   <li class="nav-item">
