--- a/templates/index.html
+++ b/templates/index.html
@@ -19,11 +19,11 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/templates/index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Alarm</a>
+                <a class="nav-link" href="/templates/alarm.html">Alarm</a>
               </li>
 
               <li class="nav-item">
@@ -36,13 +36,16 @@
       </nav>
 
       <!--watch-->
-      <div class="container-fluid text-center">
-        <div class="row justify-content-evenly ">
-            <div class="time border border-black rounded border-3 col-md-3"><p>hello</p></div>
-            <div class="time border border-black rounded border-3 col-md-3">hello</div>
-            <div class="time border border-black rounded border-3 col-md-3">hello</div>
+      <div class="container-fluid text-center mt-5">
+        <div class="row justify-content-evenly">
+            <div class="time border border-black rounded border-3 col-md-3"></div>
+            <div class="time border border-black rounded border-3 col-md-3"></div>
+            <div class="time border border-black rounded border-3 col-md-3"></div>
+            <div class="time border border-black rounded border-3 col-md-1"></div>
+
         </div>
       </div>
+      <script src="/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
