--- a/templates/stopwatch.html
+++ b/templates/stopwatch.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Stopwatch</title>
+    <link rel="stylesheet" href="/styles/style_index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
@@ -34,6 +35,21 @@
             </div>
           </nav>
 
+          <!--stopwatch-->
+      <div class="container-fluid text-center mt-5">
+        <div class="row justify-content-evenly">
+            <div class="stopwatch time border border-black rounded border-3 col-md-3"></div>
+            <div class="stopwatch time border border-black rounded border-3 col-md-3"></div>
+            <div class="stopwatch time border border-black rounded border-3 col-md-3"></div>
+
+        </div>
+        <div class="row justify-content-evenly mt-4">
+          <button type="button" class="btn btn-outline-secondary btn-lg col-md-3" id="reset">Reset</button>
+          <button type="button" class="btn btn-outline-secondary btn-lg col-md-3" id="start">Start</button>
+        </div>
+      </div>
+      
+      <script src="/js/stopwatch.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
