--- a/templates/alarm.html
+++ b/templates/alarm.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Alarm</title>
+    <link rel="stylesheet" href="/styles/style_alarm.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
@@ -34,6 +35,76 @@
             </div>
           </nav>
 
+          <!--alarm form-->
+          <div class="container-fluid mt-5">
+            <div class="row">
+              <div class="col">
+                <select class="form-select" aria-label="Default select example">
+                  <option selected>Enter hour from 01 to 12</option>
+                  <option value="1">01</option>
+                  <option value="2">02</option>
+                  <option value="3">03</option>
+                  <option value="4">04</option>
+                  <option value="5">05</option>
+                  <option value="6">06</option>
+                  <option value="7">07</option>
+                  <option value="8">08</option>
+                  <option value="9">09</option>
+                  <option value="10">10</option>
+                  <option value="11">11</option>
+                  <option value="12">12</option>
+
+                </select>
+              </div>
+
+              <div class="col">
+                <!--selecting minute in two digit choise. first is 0 - 5 and second is 0 - 9. as hightes minute is 59 and lowest is 00-->
+                <select class="form-select" aria-label="Default select example">
+                  <option selected>Enter Minute from 0 to 05</option>
+                  <option value="0">0</option>
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <option value="5">5</option>
+
+                </select>
+                </div>
+
+                <div class="col">
+                <select class="form-select" aria-label="Default select example">
+                  <option selected>Enter hour from 0 to 09</option>
+                  <option value="0">0</option>
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <option value="5">5</option>
+                  <option value="6">6</option>
+                  <option value="7">7</option>
+                  <option value="8">8</option>
+                  <option value="9">9</option>
+
+                </select>
+              </div>
+
+              <div class="col">
+                <select class="form-select" aria-label="Default select example">
+                  <option selected>AM/PM</option>
+                  <option value="AM">AM</option>
+                  <option value="PM">PM</option>
+                </select>
+              </div>
+              <!--row end-->
+            </div>
+          
+            <div class="row justify-content-evenly mt-5">
+              <button class="btn btn-outline-dark col-6 btn-lg" type="button">Set Alarm</button>
+            </div>
+            <!--container-fluid end-->
+          </div>
+
+    <script src="/js/alarm.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
