--- a/templates/alarm.html
+++ b/templates/alarm.html
@@ -41,15 +41,15 @@
               <div class="col">
                 <select class="form-select" aria-label="Default select example">
                   <option selected>Enter hour from 01 to 12</option>
-                  <option value="1">01</option>
-                  <option value="2">02</option>
-                  <option value="3">03</option>
-                  <option value="4">04</option>
-                  <option value="5">05</option>
-                  <option value="6">06</option>
-                  <option value="7">07</option>
-                  <option value="8">08</option>
-                  <option value="9">09</option>
+                  <option value="01">01</option>
+                  <option value="02">02</option>
+                  <option value="03">03</option>
+                  <option value="04">04</option>
+                  <option value="05">05</option>
+                  <option value="06">06</option>
+                  <option value="07">07</option>
+                  <option value="08">08</option>
+                  <option value="09">09</option>
                   <option value="10">10</option>
                   <option value="11">11</option>
                   <option value="12">12</option>
@@ -99,7 +99,9 @@
             </div>
           
             <div class="row justify-content-evenly mt-5">
-              <button class="btn btn-outline-dark col-6 btn-lg" type="button">Set Alarm</button>
+              <button class="btn btn-outline-danger col-3 btn-lg" type="button">Delete Alarm</button>
+              <button class="btn btn-outline-warning col-3 btn-lg" type="button">Stop</button>
+              <button class="btn btn-outline-dark col-3 btn-lg" type="button">Set Alarm</button>
             </div>
             <!--container-fluid end-->
           </div>
