--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="/styles/style_index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   </head>
   <body>
     <!--nav bar-->
@@ -45,6 +46,20 @@
 
         </div>
       </div>
+
+      <!--footer-->
+      <div class="containter-fluid mt-5">
+      <footer>
+          <div class="row justify-content-center">
+            <div class="col-1"><a href=""><i class="bi bi-instagram"><br>Instagram</i></a></div>
+            <div class="col-1"><a href=""><i class="bi bi-twitter-x"><br>X</i></a></div>
+            <div class="col-1"><a href=""><i class="bi bi-facebook"><br>Facebook</i></a></div>
+            <div class="col-1"><a href=""><i class="bi bi-google"><br>Google</i><a></div>
+    
+          </div>
+        </footer>
+      </div>
+
       <script src="/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
